feat: api CRUD Banners
