# src/routes/api.ts
@@ -10,6 +10,7 @@ import categoryController from "../controllers/category.controller";
 import regionController from "../controllers/region.controller";
 import eventController from "../controllers/event.controller";
 import ticketController from "../controllers/ticket.controller";
+import bannerController from "../controllers/banner,controller";
 
 const router = express.Router();
 
@@ -24,6 +25,13 @@ router.get("/tickets/:id", ticketController.findOne);
 router.put("/tickets/:id",[authMiddleware, aclMiddleware([ROLES.ADMIN])], ticketController.update);
 router.delete("/tickets/:id",[authMiddleware, aclMiddleware([ROLES.ADMIN])], ticketController.remove);
 router.get("/tickets/:eventId/events", ticketController.findAllByEvent);
+
+router.post("/banners", [authMiddleware, aclMiddleware([ROLES.ADMIN])], bannerController.create);
+router.get("/banners", bannerController.findAll);
+router.get("/banners/:id", bannerController.findOne);
+router.put("/banners/:id", [authMiddleware, aclMiddleware([ROLES.ADMIN])], bannerController.update);
+router.delete("/banners/:id", [authMiddleware, aclMiddleware([ROLES.ADMIN])], bannerController.remove);
+
 
 ///////category postman
 router.post(
